--- a/week7/css/LeftMenu.css
+++ b/week7/css/LeftMenu.css
@@ -1,45 +1,40 @@
-body {
-    font-family: Arial, sans-serif;
-}
+@charset "utf-8";
 
-#menu {
-    width: 200px;
-    padding: 10px;
-    background: linear-gradient(to bottom, #00aaff, #0077cc);
-}
-
-#menu h2 {
-    color: white;
+.menu div {
+    width: 150px;
+    height: 32px;
+    background: -webkit-linear-gradient(top, #333, #999, #000) repeat-x;
+    background: -o-linear-gradient(top, #333, #999, #000) repeat-x;
+    background: -ms-linear-gradient(top, #333, #999, #000) repeat-x;
+    background: -moz-linear-gradient(top, #333, #999, #000) repeat-x;
+    border-radius: 20px 20px 0px 0px;
+    color: #fff;
+    font-weight: bold;
     text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    text-transform: uppercase;
 }
 
-#menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.menu ul {
+    list-style: inside url(../img/bullet.png);
+    box-shadow: 5px 5px 10px #000;
+    border: 1px solid #000;
+    width: 148px;
+    margin: 0px;
+    padding: 0px;
 }
 
-#menu ul li {
-    position: relative;
-    margin: 5px 0;
+.menu li {
+    padding: 5px;
+    width: 138px;
+    text-align: center;
+    cursor: pointer;
+    text-transform: capitalize;
 }
 
-#menu ul li::before {
-    content: "•";
-    color: white;
-    position: absolute;
-    left: -15px;
-    top: 5px;
-}
-
-#menu ul li a {
-    text-decoration: none;
-    color: white;
-    display: block;
-    padding: 8px;
-}
-
-#menu ul li a:hover {
-    background-color: yellow;
-    color: black;
+.menu li:hover {
+    background-color: #ff9;
+    font-weight: bold;
+    color: #f00;
 }
